force-app/main/default/objects/Form_Label__c/Form_Label__c.object-meta.xml
<CustomObject>
    <description>Form Label stores all the text entered by a user in the form under the section of Consent.</description>
    <label>Form Label</label>
    <nameField>
        <label>Form Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>