force-app/main/default/objects/Form_Label__c/fields/FormId__c.field-meta.xml
<CustomField>
    <fullName>FormId__c</fullName>
    <label>Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>