force-app/main/default/objects/Form_Label__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>