force-app/main/default/objects/Form_Label__c/fields/Label_Length__c.field-meta.xml
<CustomField>
    <fullName>Label_Length__c</fullName>
    <label>Label Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>